[package]
name = "wasm-game-lib"
version = "0.2.0"
authors = ["Mubeotix <mubelotix@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple and fast game library for Wasm."
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[dependencies]
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"
wasm-bindgen-futures = "0.4.8"
console_error_panic_hook = "0.1.6"
futures = "0.3.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[dependencies.web-sys]
version = "0.3.28"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'console',
  'Event',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'HtmlImageElement',
  'KeyboardEvent',
  'FontFace',
  'Crypto',
  'FontFaceSet']