[package]
name = "wasm-game-lib"
version = "0.6.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
license = "MIT"
description = "[DEPRECATED] A easy-to-use and fast game library for Wasm."
readme = "README.md"
repository = "https://github.com/Mubelotix/wasm-game-lib"

[badges]
maintenance = { status = "deprecated" }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
opt-level = "s"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
futures = "0.3"
lazy_static = "1.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'console',
  'Event',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'HtmlImageElement',
  'KeyboardEvent',
  'FontFace',
  'Crypto',
  'FontFaceSet',
  'TextMetrics',
  'WheelEvent',
  ]
